--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,7 @@
       "src/*": ["src/*"]
     },
     "types": [
+      "vite/client",
       "svelte",
       "svelte/store",
       "svelte/motion",
