--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
+    "sw": "copyfiles -f \"public/sw*.js\" dist",
     "check": "svelte-check --tsconfig ./tsconfig.json"
   },
   "author": "Richard Van Camp",
@@ -27,6 +28,7 @@
     "@types/pouchdb-browser": "^6.1.3",
     "@types/sanctuary": "^3.0.3",
     "autoprefixer": "^10.2.6",
+    "copyfiles": "^2.4.1",
     "prettier": "^2.3.2",
     "sass": "^1.35.1",
     "svelte": "^3.38.3",
